# UnitCL

./: CMakeLists.txt
include/unitcl/: unitcl.h
include/unitcl/core/: enums.h  list.h  test.h  types.h
include/unitcl/core/lists/: suite_list.h  test_list.h
include/unitcl/core/macros/: list_generator.h  macros.h  utils.h
include/unitcl/core/macros/assert/: assert.h  assert_eq.h  assert_str_eq.h  fail.h  success.h
include/unitcl/core/macros/testing/: suite.h  test.h
include/unitcl/reporter/: default.h
include/unitcl/suite/: test_suite.h
source/: main.c
source/unitcl/core/: list.c  test.c
source/unitcl/core/lists/: suite_list.c  test_list.c
source/unitcl/reporter/: reporter.c
source/unitcl/suite/: test_suite.c
